<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宅速洁</string>
    <string name="action_exit">退出</string>
    <string name="titlebar_title">服务地址</string>
    <string name="drag_map_to_select">直接拖拽到您想要的位置</string>
    <string name="back">返回</string>
    <string name="setting">服务</string>
    <string name="login">&#160;&#160;&#160;登录 &#160;&#160;</string>
    <string name="confirm">确认</string>
    <string name="orders">订单</string>
    <string name="search_btn">继续</string>
    <string name="btn_login_getCode">获取动态密码</string>
    <string name="btn_login_title">开始使用</string>
    <string name="agree_txt">阅读并同意软件及服务协议</string>
	<string name="btn_submit">下一步,订单确认</string>
	<string name="login_detail_title">一键登录</string>
	<string name="contact_detail_title">联系和备注</string>
	<string name="order_confirm_title">订单确认</string>
	<string name="order_frst_title">服务时长和时间</string>
	<string name="order_txt_next">下一步,联系方式和备注</string>
	<string name="time_txt_2">2小时  60元</string>
	<string name="time_txt_3">3小时  90元</string>
	<string name="time_txt_4">4小时 120元</string>
	<string name="pay_submit">使用支付宝付款</string>
	<string name="address_input">完善地址</string>
	
	<string name="order_trace">订单跟踪</string>
	<string name="order_submit">需求提交</string>
	<string name="order_cancel">取消订单</string>
	<string name="match_complete">匹配完成</string>
	<string name="contact_home_company">联系家政公司</string>
	<string name="home_service">上门服务</string>
	<string name="contact_waiter">联系他</string>
	<string name="confirm_complete">确认完成</string>
	
	<string name="order_send">提交订单</string>
	<string name="pay_send">支付中</string>
	<string name="order_send_fail">提交订单失败</string>
	<string name="order_send_success">提交订单成功</string>
	<string name="pay_send_fail">支付失败</string>
	<string name="pay_send_success">支付成功</string>
	<string name="pay_install">下载安全支付组件</string>
	<string name="pay_install_success">安装安全支付组件</string>
	
	<string name="service_title">服务</string>
	<string name="order_btn">发布订单</string>
	<string name="call_btn">呼叫</string>
	<string name="service_phone">400-920-4040</string>
	<string name="no_service_hint">对不起，您所在的地区还没有开通宅速洁服务，谢谢您的使用。</string>
	<string name="no_service_title">该地区没有服务</string>
	<string name="no_order">您还没有发布订单，请立即发布吧!</string>
	
	<string name="cancle">取消</string>
    <string name="ok">确定</string>
    
    <string name="searching">查询中,请稍候...</string>
	
</resources>