<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/titleBar" android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="44.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<Button android:textColor="@color/white" android:id="@+id/title_btn_back" android:background="@drawable/title_btn_back" android:paddingLeft="20.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/back" android:layout_centerVertical="true" />
    <Button android:textColor="@color/white" android:id="@+id/title_btn_setting" android:background="@drawable/title_btn_right" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/setting" android:layout_centerVertical="true" />
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="170.0dip" android:singleLine="true" android:layout_centerInParent="true" style="@style/title_text" android:text="@string/titlebar_title"/>
    <Button android:textColor="@color/white" android:id="@+id/title_btn_order" android:background="@drawable/title_btn_right" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/orders" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <Button android:id="@+id/title_btn_login"  android:textColor="@color/white" android:background="@drawable/title_btn_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:text="@string/login" />
</RelativeLayout>
